# gyoza-tare-map

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  seeds.yaml
docs/: crawl_policy.md  index.html  labels.md  schema.md
scripts/: build_readme_html.py  discover_seeds.py  evaluate_classifier.py  fetch_geodata.py  run_pipeline.py
spec/: spec.md
src/gyoza_tare_map/: config.py  models.py  pipeline.py
src/gyoza_tare_map/aggregate/: deduplicator.py  scorer.py  writer.py
src/gyoza_tare_map/classify/: base.py  labels.py  rule_classifier.py
src/gyoza_tare_map/crawl/: cache.py  policy.py  runner.py
src/gyoza_tare_map/crawl/sources/: base.py  httpx_source.py  playwright_source.py  rss_source.py
src/gyoza_tare_map/extract/: html_extractor.py  record_builder.py  region_detector.py
src/gyoza_tare_map/search/: hatena_search.py
src/gyoza_tare_map/visualize/: choropleth.py  report.py
tests/: classifier_testset.yaml
